traversal.zigzag.traversalzigzag.TraversalZigZag.scala.error
Erreur de compilation :
TraversalZigZag:21: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  if(getMondeLargeur()==getX()+1)
  ^TraversalZigZag:22: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
    return false
    ^TraversalZigZag:26: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  return true
  ^TraversalZigZag:30: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  if(getX()==0)
  ^TraversalZigZag:31: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
    return false
    ^TraversalZigZag:35: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  return true
  ^